# Clinical-insight-platform

./: .gitignore  README.md
backend/: agent.py  analytics.py  collaboration.py  data_processor.py  main.py  models.py  pyproject.toml  test_ingestion.py
backend/clinical_insight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data_cache/: studies_cache.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/.next/: trace
frontend/.next/server/: _error.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
frontend/.next/server/pages/: _error.js
frontend/.next/server/vendor-chunks/: @swc+helpers@0.5.2.js  @swc.js  @ungap+structured-clone@1.3.0.js  asynckit.js  asynckit@0.4.0.js  axios.js  axios@1.13.2.js  bail@2.0.2.js  call-bind-apply-helpers.js  call-bind-apply-helpers@1.0.2.js  character-entities@2.0.2.js  clsx.js  clsx@2.1.1.js  combined-stream.js  combined-stream@1.0.8.js  comma-separated-tokens@2.0.3.js  debug.js  debug@4.4.3.js  decode-named-character-reference@1.2.0.js  delayed-stream.js  delayed-stream@1.0.0.js  dequal@2.0.3.js  devlop@1.1.0.js  dunder-proto.js  dunder-proto@1.0.1.js  (+99 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertsPanel.tsx  ChatInterface.tsx  DataQualityIndex.tsx  QualityReportView.tsx  RiskHeatmap.tsx  StudyList.tsx
frontend/hooks/: useStudies.ts
(+77 files in other folders)
